print de debug